Added html tags to index.html

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,44 +9,78 @@
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
+  <header>
+    <a href="#">
+      <img src="./assets/logo-dark.svg" alt="skilled logo"/>
+    </a>
+    <button class="" type="button">Get Started</button>
+  </header>
 
-  Get Started
+  <main>
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Maximize skill, minimize budget</h1>
+        <p>Our modern courses across a range of in-demand skills will give you the 
+        knowledge you need to live the life you want.</p>
+        <button class="hero-button" type="button">Get Started</button>
+      </div>
 
-  Maximize skill, minimize budget
+      <figure>
+        <img src="./assets/image-hero-mobile.png"/>
+      </figure>      
+    </section>
 
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
+    <section class="courses">
+      <div class="courses-heading">
+        <h3>Check out our most popular courses!</h3>
+      </div>
 
-  Get Started
+      <div class="course">
+        <img src="./assets/icon-animation.svg" alt="animation icon"/>
+        <h3>Animation</h3>
+        <p>Learn the latest animation techniques to create stunning motion 
+          design and captivate your audience.</p>
+        <a href="#">Get Started</a>
+      </div>
 
-  Check out our most popular courses!
+      <div class="course">
+        <img src="./assets/icon-design.svg" alt="design icon" />
+        <h3>Design</h3>
+        <p>Create beautiful, usable interfaces to help shape the future of 
+          how the web looks.</p>
+        <a href="#">Get Started</a>
+      </div>
 
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
+      <div class="course">
+        <img src="./assets/icon-photography.svg" alt="photography icon"
+        <h3>Photography</h3>
+        <p> Explore critical fundamentals like lighting, composition, and focus 
+          to capture exceptional photos.</p>
+        <a href="#">Get Started</a>
+      </div>
 
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
+      <div class="course">
+        <img src="./assets/icon-crypto.svg" alt="crypto icon" />
+        <h3>Crypto</h3>
+        <p> All you need to know to get started investing in crypto. Go from beginner 
+          to advanced with this 54 hour course.</p>
+        <a href="#">Get Started</a>
+      </div>
 
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
+      <div class="course">
+        <img src="./assets/icon-business.svg" alt="business icon" />
+        <h3>Business</h3>
+        <p>A step-by-step playbook to help you start, scale, and sustain your business 
+          without outside investment.</p>
+        <a href="#">Get Started</a>
+      </div>
+    </section>
+  </main>
 
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started
+  <footer>
+    <img src="./assets/logo-light.svg" alt="skilled logo" />
+    <button class="footer-button" type="button">Get Started</button>
+  </footer>
 
 </body>
 </html>
