--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
@@ -15,7 +20,7 @@
     <a href="#">
       <img src="./assets/logo-dark.svg" alt="skilled logo"/>
     </a>
-    <button class="" type="button">Get Started</button>
+    <button class="header-button" type="button">Get Started</button>
   </header>
 
   <main>
@@ -27,9 +32,9 @@
         <button class="hero-button" type="button">Get Started</button>
       </div>
 
-      <figure>
+      <div class="hero-image">
         <img src="./assets/image-hero-mobile.png"/>
-      </figure>      
+      </div>
     </section>
 
     <section class="courses">
