--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
         <h3>Check out our most popular courses!</h3>
       </div>
 
-      <div class="course">
+      <div class="course-card">
         <img src="./assets/icon-animation.svg" alt="animation icon"/>
         <h3>Animation</h3>
         <p>Learn the latest animation techniques to create stunning motion 
           design and captivate your audience.</p>
-        <a href="#">Get Started</a>
+        <a class="" href="#">Get Started</a>
       </div>
 
-      <div class="course">
+      <div class="course-card">
         <img src="./assets/icon-design.svg" alt="design icon" />
         <h3>Design</h3>
         <p>Create beautiful, usable interfaces to help shape the future of 
@@ -58,7 +58,7 @@
         <a href="#">Get Started</a>
       </div>
 
-      <div class="course">
+      <div class="course-card">
         <img src="./assets/icon-photography.svg" alt="photography icon"
         <h3>Photography</h3>
         <p> Explore critical fundamentals like lighting, composition, and focus 
@@ -66,7 +66,7 @@
         <a href="#">Get Started</a>
       </div>
 
-      <div class="course">
+      <div class="course-card">
         <img src="./assets/icon-crypto.svg" alt="crypto icon" />
         <h3>Crypto</h3>
         <p> All you need to know to get started investing in crypto. Go from beginner 
@@ -74,7 +74,7 @@
         <a href="#">Get Started</a>
       </div>
 
-      <div class="course">
+      <div class="course-card">
         <img src="./assets/icon-business.svg" alt="business icon" />
         <h3>Business</h3>
         <p>A step-by-step playbook to help you start, scale, and sustain your business 
