Sorted alignment in header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <a href="#">
-      <img src="./assets/logo-dark.svg" alt="skilled logo"/>
+      <img class="header-logo" src="./assets/logo-dark.svg" alt="skilled logo"/>
     </a>
     <button class="header-button" type="button">Get Started</button>
   </header>
