Used pseudo-element of ::before on card icons.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,76 +13,72 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap" rel="stylesheet">
-  
+
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
+
 <body>
   <header>
     <a href="#">
-      <img class="header-logo" src="./assets/logo-dark.svg" alt="skilled logo"/>
+      <img class="header-logo" src="./assets/logo-dark.svg" alt="skilled logo" />
     </a>
     <button class="header-button" type="button">Get Started</button>
   </header>
 
   <main>
-    <section class="hero-area">
+    <div class="hero-area">
       <div class="content-wrapper">
         <h1>Maximize skill, minimize budget</h1>
-        <p>Our modern courses across a range of in-demand skills will give you the 
-        knowledge you need to live the life you want.</p>
+        <p>Our modern courses across a range of in-demand skills will give you the
+          knowledge you need to live the life you want.</p>
         <button class="hero-button" type="button">Get Started</button>
       </div>
 
       <div class="hero-image">
-        <img src="./assets/image-hero-mobile.png"/>
+        <img src="./assets/image-hero-mobile.png" />
       </div>
-    </section>
+    </div>
 
-    <section class="courses">
-      <div class="courses-heading">
-        <h3>Check out our most popular courses!</h3>
+    <div class="courses">
+      <div class="courses-heading-background">
+        <h3 class="courses-heading">Check out our most popular courses!</h3>
       </div>
 
-      <div class="course-card">
-        <img src="./assets/icon-animation.svg" alt="animation icon"/>
+      <div class="course-card animation">
         <h3>Animation</h3>
-        <p>Learn the latest animation techniques to create stunning motion 
+        <p>Learn the latest animation techniques to create stunning motion
           design and captivate your audience.</p>
         <a class="" href="#">Get Started</a>
       </div>
 
-      <div class="course-card">
-        <img src="./assets/icon-design.svg" alt="design icon" />
+      <div class="course-card design">
         <h3>Design</h3>
-        <p>Create beautiful, usable interfaces to help shape the future of 
+        <p>Create beautiful, usable interfaces to help shape the future of
           how the web looks.</p>
         <a href="#">Get Started</a>
       </div>
 
-      <div class="course-card">
-        <img src="./assets/icon-photography.svg" alt="photography icon"
+      <div class="course-card photography">
         <h3>Photography</h3>
-        <p> Explore critical fundamentals like lighting, composition, and focus 
+        <p> Explore critical fundamentals like lighting, composition, and focus
           to capture exceptional photos.</p>
         <a href="#">Get Started</a>
       </div>
 
-      <div class="course-card">
-        <img src="./assets/icon-crypto.svg" alt="crypto icon" />
+      <div class="course-card crypto">
         <h3>Crypto</h3>
-        <p> All you need to know to get started investing in crypto. Go from beginner 
+        <p> All you need to know to get started investing in crypto. Go from beginner
           to advanced with this 54 hour course.</p>
         <a href="#">Get Started</a>
       </div>
 
-      <div class="course-card">
-        <img src="./assets/icon-business.svg" alt="business icon" />
+      <div class="course-card business">
         <h3>Business</h3>
-        <p>A step-by-step playbook to help you start, scale, and sustain your business 
+        <p>A step-by-step playbook to help you start, scale, and sustain your business
           without outside investment.</p>
         <a href="#">Get Started</a>
       </div>
-    </section>
+    </div>
   </main>
 
   <footer>
@@ -90,4 +87,5 @@
   </footer>
 
 </body>
+
 </html>
