--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <a href="#">
-      <img class="header-logo" src="./assets/logo-dark.svg" alt="skilled logo" />
+      <img class="header-logo" src="./assets/logo-dark.svg" alt="skilled logo dark blue letters" />
     </a>
     <button class="header-button" type="button">Get Started</button>
   </header>
@@ -45,10 +45,12 @@
       </div>
 
       <div class="course-card animation">
-        <h3>Animation</h3>
-        <p>Learn the latest animation techniques to create stunning motion
-          design and captivate your audience.</p>
-        <a class="" href="#">Get Started</a>
+        <div class="card-content">
+          <h3>Animation</h3>
+          <p>Learn the latest animation techniques to create stunning motion
+            design and captivate your audience.</p>
+          <a class="" href="#">Get Started</a>
+        </div>
       </div>
 
       <div class="course-card design">
