--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
         <button class="hero-button" type="button">Get Started</button>
       </div>
 
-      <div class="hero-image">
-        <img src="./assets/image-hero-mobile.png" />
+      <div class="contain-hero-image">
+        <picture class="hero-image">
+          <source srcset="./assets/image-hero-tablet.png" media="(min-width: 768px)" />
+          <source srcset="./assets/image-hero-desktop.png" media="(min-width: 1200px)" />
+          <img class="product-image" src="./assets/image-hero-mobile.png" alt="Female student sipping coffee" />
+        </picture>
       </div>
     </div>
 
