Tweaked the hero image position and added styling for the desktop screen size

--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
   </main>
 
   <footer>
-    <img src="./assets/logo-light.svg" alt="skilled logo" />
-    <button class="footer-button" type="button">Get Started</button>
+    <div class="contain-footer">
+      <img src="./assets/logo-light.svg" alt="skilled logo" />
+      <button class="footer-button" type="button">Get Started</button>
+    </div>
   </footer>
 
 </body>
