--- a/index.html
+++ b/index.html
@@ -58,31 +58,39 @@
       </div>
 
       <div class="course-card design">
-        <h3>Design</h3>
-        <p>Create beautiful, usable interfaces to help shape the future of
-          how the web looks.</p>
-        <a href="#">Get Started</a>
+        <div class="card-content">
+          <h3>Design</h3>
+          <p>Create beautiful, usable interfaces to help shape the future of
+            how the web looks.</p>
+          <a href="#">Get Started</a>
+        </div>
       </div>
 
       <div class="course-card photography">
-        <h3>Photography</h3>
-        <p> Explore critical fundamentals like lighting, composition, and focus
-          to capture exceptional photos.</p>
-        <a href="#">Get Started</a>
+        <div class="card-content">
+          <h3>Photography</h3>
+          <p> Explore critical fundamentals like lighting, composition, and focus
+            to capture exceptional photos.</p>
+          <a href="#">Get Started</a>
+        </div>
       </div>
 
       <div class="course-card crypto">
-        <h3>Crypto</h3>
-        <p> All you need to know to get started investing in crypto. Go from beginner
-          to advanced with this 54 hour course.</p>
-        <a href="#">Get Started</a>
+        <div class="card-content">
+          <h3>Crypto</h3>
+          <p> All you need to know to get started investing in crypto. Go from beginner
+            to advanced with this 54 hour course.</p>
+          <a href="#">Get Started</a>
+        </div>
       </div>
 
       <div class="course-card business">
-        <h3>Business</h3>
-        <p>A step-by-step playbook to help you start, scale, and sustain your business
-          without outside investment.</p>
-        <a href="#">Get Started</a>
+        <div class="card-content">
+          <h3>Business</h3>
+          <p>A step-by-step playbook to help you start, scale, and sustain your business
+            without outside investment.</p>
+          <a href="#">Get Started</a>
+        </div>
       </div>
     </div>
   </main>
