--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
       <div class="contain-hero-image">
         <picture class="hero-image">
-          <source srcset="./assets/image-hero-tablet.png" media="(min-width: 768px)" />
-          <source srcset="./assets/image-hero-desktop.png" media="(min-width: 1200px)" />
+          <source media="(min-width: 1200px)" srcset="./assets/image-hero-desktop.png" />
+          <source media="(min-width: 768px)" srcset="./assets/image-hero-tablet.png" />
           <img class="product-image" src="./assets/image-hero-mobile.png" alt="Female student sipping coffee" />
         </picture>
       </div>
